local latex env set up

--- a/thesis/chapter4.tex
+++ b/thesis/chapter4.tex
@@ -108,7 +108,7 @@ In this section, distributions of labels are created from different NLP predicto
     \item Extract document vectors from e.g. BERT
     \begin{itemize}
         \item Create t-SNE plot with regard to intent, topics,... further categories
-        \item Apply clusterting algorithm and compare resulting clusters 
+        \item Apply clusterting algorithm and compare resulting clustersX 
     \end{itemize}
     \item Topic Modeling
         \begin{itemize}
