--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[english,master,fsu]{webisthesis}\thesisprogramme{Computational and Data Science, M.Sc.} % Jena
+\documentclass[english,master,fsu]{webisthesis} % Jena
 % \documentclass[german,master,buw]{webisthesis} % Weimar
 % \documentclass[german,bachelor,ul]{webisthesis} % Leipzig
 % \documentclass[german,master,buw,web]{webisthesis} % Weimar, for web page
@@ -22,7 +22,7 @@
 \ThesisSetTitle{Master Thesis Benjamin Schneg}
 \ThesisSetKeywords{These, are, my, Keywords} % only for PDF meta attributes
 \ThesisSetLocation{Jena} 
-
+\thesisprogramme{Computational and Data Science, M.Sc.}
 \ThesisSetAuthor{Benjamin Schneg}
 \ThesisSetStudentNumber{202811}
 \ThesisSetDateOfBirth{19}{2}{1998}
