--- a/thesis/chapter1.tex
+++ b/thesis/chapter1.tex
@@ -1,12 +1,20 @@
 \chapter{Introduction}
 
 
+This is an introductionysfasrf
+dfdf
+
 
 \section{Was/Warum, Motivation, Einordnung}
 \section{Background, wofür sind query logs gut}
-
+\begin{itemize}
+    \item Was/Warum, Motivation, Einordnung
+    \item Background, wofür sind query logs gut
+    \item What research can be promoted by new trustworthy query logs
+    \item Why are new trustworthy query logs needed
+    \item Contributions in this thesis
+    \item Outline of the thesis
+\end{itemize}
  
-
-
 
 
