wrting: introduction first bit

--- a/thesis/chapter1.tex
+++ b/thesis/chapter1.tex
@@ -1,9 +1,6 @@
 \chapter{Introduction}
 
-
-This is an introductionysfasrf
-dfdf
-
+Search engine query logs are an important resource to promote research in information retrieval~\citep{agosti:2012}. They enable analyzing user behavior and user experience, improving query suggestions and query reformulations or provide data to train retrieval models for re-ranking~\citep{reimer:2023}. Additionally, publical access to search engine query logs is valuable to create transparency and conduct investigations on the fairness of major search engine's ranking algorithms~\citep{reimer:2023}. Despite the high value of granting access to query logs, they remain publically unavailable for the most part. This is due to multiple reasons. On the one hand, the publication of search engine logs brings up privacy concerns, as they contain sensitive information about the users~\citep{reimer:2023}. On the other hand, the search engine operator's interests may not align with the previous mentioned motivations to publish query logs, as higher competition in the search engine market may arise or law enforcement efforts would be supported~\citep{reimer:2023}.         
 
 \section{Was/Warum, Motivation, Einordnung}
 \section{Background, wofür sind query logs gut}
@@ -18,3 +15,4 @@ dfdf
  
 
 
+\cite{reimer:2023}
