--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -93,4 +93,68 @@
   year      = {2016},
   url       = {https://doi.org/10.1145/2983323.2983723}  ,
   doi       = {10.1145/2983323.2983723}
+
+}
+
+@inproceedings{reimer:2023,
+  author       = {Jan Heinrich Reimer and
+                  Sebastian Schmidt and
+                  Maik Fr{\"{o}}be and
+                  Lukas Gienapp and
+                  Harrisen Scells and
+                  Benno Stein and
+                  Matthias Hagen and
+                  Martin Potthast},
+  editor       = {Hsin{-}Hsi Chen and
+                  Wei{-}Jou (Edward) Duh and
+                  Hen{-}Hsen Huang and
+                  Makoto P. Kato and
+                  Josiane Mothe and
+                  Barbara Poblete},
+  title        = {The Archive Query Log: Mining Millions of Search Result Pages of Hundreds
+                  of Search Engines from 25 Years of Web Archives},
+  booktitle    = {Proceedings of the 46th International {ACM} {SIGIR} Conference on
+                  Research and Development in Information Retrieval, {SIGIR} 2023, Taipei,
+                  Taiwan, July 23-27, 2023},
+  pages        = {2848--2860},
+  publisher    = {{ACM}},
+  year         = {2023},
+  url          = {https://doi.org/10.1145/3539618.3591890},
+  doi          = {10.1145/3539618.3591890},
+  timestamp    = {Fri, 21 Jul 2023 22:25:23 +0200},
+  biburl       = {https://dblp.org/rec/conf/sigir/ReimerSFGS0HP23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{cooper:2008,
+  author       = {Alissa Cooper},
+  title        = {A survey of query log privacy-enhancing techniques from a policy perspective},
+  journal      = {{ACM} Trans. Web},
+  volume       = {2},
+  number       = {4},
+  pages        = {19:1--19:27},
+  year         = {2008},
+  url          = {https://doi.org/10.1145/1409220.1409222}, 
+  doi          = {10.1145/1409220.1409222},
+  timestamp    = {Mon, 11 May 2020 15:44:45 +0200},
+  biburl       = {https://dblp.org/rec/journals/tweb/Cooper08.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{agosti:2012,
+  author       = {Maristella Agosti and
+                  Franco Crivellari and
+                  Giorgio Maria Di Nunzio},
+  title        = {Web log analysis: a review of a decade of studies about information
+                  acquisition, inspection and interpretation of user interaction},
+  journal      = {Data Min. Knowl. Discov.},
+  volume       = {24},
+  number       = {3},
+  pages        = {663--696},
+  year         = {2012},
+  url          = {https://doi.org/10.1007/s10618-011-0228-8}, 
+  doi          = {10.1007/S10618-011-0228-8},
+  timestamp    = {Sun, 02 Jun 2019 21:01:24 +0200},
+  biburl       = {https://dblp.org/rec/journals/datamine/AgostiCN12.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
