--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -158,3 +158,23 @@
   biburl       = {https://dblp.org/rec/journals/datamine/AgostiCN12.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{pass:06,
+  author       = {Greg Pass and
+                  Abdur Chowdhury and
+                  Cayley Torgeson},
+  editor       = {Xiaohua Jia},
+  title        = {A picture of search},
+  booktitle    = {Proceedings of the 1st International Conference on Scalable Information
+                  Systems, Infoscale 2006, Hong Kong, May 30-June 1, 2006},
+  series       = {{ACM} International Conference Proceeding Series},
+  volume       = {152},
+  pages        = {1},
+  publisher    = {{ACM}},
+  year         = {2006},
+  url          = {https://doi.org/10.1145/1146847.1146848}, 
+  doi          = {10.1145/1146847.1146848},
+  timestamp    = {Tue, 06 Nov 2018 16:57:28 +0100},
+  biburl       = {https://dblp.org/rec/conf/infoscale/PassCT06.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
