--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -88,6 +88,7 @@
 \usehyperref
 
 \begin{document}
+% \begin{sloppypar}
 \begin{frontmatter}
 \begin{abstract}
 This is the \LaTeX{} template for Bachelor and Master theses at Webis. This template contains several hints and conventions on how to structure a thesis, how to cite the work of others, and how to display your results besides plain text. 
@@ -120,6 +121,6 @@ This is the \LaTeX{} template for Bachelor and Master theses at Webis. This temp
 % Bibliography
 \bibliographystyle{plainnat} % requires package natbib. An alternative is apalike
 \bibliography{literature}    % load file literature.bib
-
+% \end{sloppypar}
 \end{document}
 
