code: search-operators updated, search-operators-count added, named-entities-count added, named-entities adjusted, first bit of search-operators visualization

--- a/src/thesis_schneg/visualize.ipynb
+++ b/src/thesis_schneg/visualize.ipynb
@@ -10,7 +10,8 @@
     "This jupyter notebook contains visualizations for the following experiments:\n",
     "\n",
     "1. Query Length\n",
-    "2. Zipf's Law"
+    "2. Zipf's Law\n",
+    "3. Search Operatora"
    ]
   },
   {
@@ -441,6 +442,244 @@
     "        plt.show()\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Search Operators  \n",
+    "\n",
+    "In this experiment the query logs were investigated with regard to the use of search operators.\n",
+    "\n",
+    "Configuration:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from thesis_schneg.model import DatasetName, AnalysisName\n",
+    "\n",
+    "##### set visualization configuration #####\n",
+    "\n",
+    "# save visualization or not\n",
+    "save_vis: bool = False\n",
+    "# save_vis: bool = True\n",
+    "\n",
+    "# select dataset (if none is selected all datasets are visualized in a joint plot) \n",
+    "dataset: DatasetName = None \n",
+    "# dataset: DatasetName = 'aol'\n",
+    "# dataset: DatasetName = 'aql'\n",
+    "# dataset: DatasetName = 'ms-marco'\n",
+    "# dataset: DatasetName = 'orcas'\n",
+    "\n",
+    "# set analysis that should be visualized\n",
+    "analysis_name: AnalysisName = 'search-operators'\n",
+    "# analysis_name: AnalysisName = 'search-operators-count'\n",
+    "\n",
+    "\n",
+    "# load visualization parametes into dictionary\n",
+    "if analysis_name == 'search-operators':\n",
+    "    vis_params = {\"dataset-col-x\": \"operator\", \"dataset-col-y\": \"count()\", \"x-label\": \"Search operator\", \"y-label\": \"Count\", \"x-lim\": None, \"y-lim\": None, \"title\": \"Count of search operators\"}\n",
+    "elif analysis_name == 'search-operators-count':\n",
+    "    vis_params = {\"dataset-col-x\": \"operator-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Number of search operators\", \"y-label\": \"Count\", \"x-lim\": None, \"y-lim\": None, \"title\": \"Number of search operators in a query\"}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's load the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from thesis_schneg.vis_modules import _get_results_paths, load_results\n",
+    "color = None\n",
+    "label = None \n",
+    "lengths = []\n",
+    "counts = []\n",
+    "sets = []\n",
+    "if dataset is None:\n",
+    "    # crawl files from all datasets and load into dictionary\n",
+    "    paths = {f\"{name}\": _get_results_paths(name, analysis_name) for name in [\n",
+    "        \"aol\", \"ms-marco\", \"orcas\", \"aql\"]}\n",
+    "    # iterate over datasets and create visualization\n",
+    "    for name, result_paths in paths.items():\n",
+    "        vis_data = load_results(result_paths)\n",
+    "        sets.append(vis_data)\n",
+    "        # modify data -> create relative frequency\n",
+    "        # vis_data[vis_params[\"dataset-col-y\"]] = vis_data[vis_params[\"dataset-col-y\"]]/vis_data[vis_params[\"dataset-col-y\"]].sum()\n",
+    "        lengths.append(vis_data[vis_params[\"dataset-col-x\"]].to_list())\n",
+    "        counts.append(vis_data[vis_params[\"dataset-col-y\"]].to_list())\n",
+    "    color = ['blue', 'orange', 'red', 'purple']\n",
+    "    label=[\"AOL\", \"MS-MARCO\", \"ORCAS\", \"AQL\"]\n",
+    "else:\n",
+    "    # load data from single dataset\n",
+    "    result_paths = _get_results_paths(dataset, analysis_name)\n",
+    "    vis_data = load_results(result_paths)\n",
+    "    # modify data -> create relative frequency\n",
+    "    vis_data[vis_params[\"dataset-col-y\"]] = vis_data[vis_params[\"dataset-col-y\"]]/vis_data[vis_params[\"dataset-col-y\"]].sum()\n",
+    "    lengths.append(vis_data[vis_params[\"dataset-col-x\"]].to_list())\n",
+    "    counts.append(vis_data[vis_params[\"dataset-col-y\"]].to_list())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can start the visualization:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>operator</th>\n",
+       "      <th>count()</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>related:</td>\n",
+       "      <td>1471358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cache:</td>\n",
+       "      <td>22900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>intitle:</td>\n",
+       "      <td>25639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"</td>\n",
+       "      <td>12565178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>define:</td>\n",
+       "      <td>21778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>filetype:</td>\n",
+       "      <td>19470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>intext:</td>\n",
+       "      <td>4971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-</td>\n",
+       "      <td>5003949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>*</td>\n",
+       "      <td>272799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>allintext:</td>\n",
+       "      <td>620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>allintitle:</td>\n",
+       "      <td>3258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>allinurl:</td>\n",
+       "      <td>5564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>around(</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>and</td>\n",
+       "      <td>4377832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>or</td>\n",
+       "      <td>596212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>site:</td>\n",
+       "      <td>5509623</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      operator   count()\n",
+       "0     related:   1471358\n",
+       "0       cache:     22900\n",
+       "0     intitle:     25639\n",
+       "0            \"  12565178\n",
+       "0      define:     21778\n",
+       "0    filetype:     19470\n",
+       "1      intext:      4971\n",
+       "0            -   5003949\n",
+       "0            *    272799\n",
+       "1   allintext:       620\n",
+       "2  allintitle:      3258\n",
+       "3    allinurl:      5564\n",
+       "4      around(       194\n",
+       "0         and    4377832\n",
+       "0          or     596212\n",
+       "0        site:   5509623"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sets[3]"
    ]
   }
  ],
