code: search operators adjusted, named entities vis started

--- a/src/thesis_schneg/visualize.ipynb
+++ b/src/thesis_schneg/visualize.ipynb
@@ -11,7 +11,8 @@
     "\n",
     "1. Query Length\n",
     "2. Zipf's Law\n",
-    "3. Search Operatora"
+    "3. Search Operators\n",
+    "4. Named Entities"
    ]
   },
   {
@@ -477,7 +478,7 @@
     "# dataset: DatasetName = 'orcas'\n",
     "\n",
     "# set analysis that should be visualized\n",
-    "analysis_name: AnalysisName = 'search-operators'\n",
+    "analysis_name: AnalysisName = 'extract-search-operators'\n",
     "# analysis_name: AnalysisName = 'search-operators-count'\n",
     "\n",
     "\n",
@@ -497,9 +498,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Selected directory \"aol-extract-search-operators-all\" is empty",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m sets \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dataset \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m# crawl files from all datasets and load into dictionary\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m     paths \u001b[38;5;241m=\u001b[39m \u001b[43m{\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mname\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m_get_results_paths\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43manalysis_name\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43maol\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mms-marco\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43morcas\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43maql\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m}\u001b[49m\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;66;03m# iterate over datasets and create visualization\u001b[39;00m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m name, result_paths \u001b[38;5;129;01min\u001b[39;00m paths\u001b[38;5;241m.\u001b[39mitems():\n",
+      "Cell \u001b[0;32mIn[2], line 9\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      6\u001b[0m sets \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dataset \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m# crawl files from all datasets and load into dictionary\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m     paths \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m: \u001b[43m_get_results_paths\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43manalysis_name\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m [\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maol\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mms-marco\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morcas\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maql\u001b[39m\u001b[38;5;124m\"\u001b[39m]}\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;66;03m# iterate over datasets and create visualization\u001b[39;00m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m name, result_paths \u001b[38;5;129;01min\u001b[39;00m paths\u001b[38;5;241m.\u001b[39mitems():\n",
+      "File \u001b[0;32m~/studium/masterarbeit/thesis-schneg/src/thesis_schneg/vis_modules.py:48\u001b[0m, in \u001b[0;36m_get_results_paths\u001b[0;34m(dataset_name, analysis_name)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m# get all files in the directory\u001b[39;00m\n\u001b[1;32m     46\u001b[0m result_files \u001b[38;5;241m=\u001b[39m [path \u001b[38;5;28;01mfor\u001b[39;00m path \u001b[38;5;129;01min\u001b[39;00m result_path\u001b[38;5;241m.\u001b[39miterdir()\n\u001b[1;32m     47\u001b[0m                 \u001b[38;5;28;01mif\u001b[39;00m path\u001b[38;5;241m.\u001b[39mis_file()]\n\u001b[0;32m---> 48\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m result_files, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSelected directory \u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mresult_path\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m is empty\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result_files\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Selected directory \"aol-extract-search-operators-all\" is empty"
+     ]
+    }
+   ],
    "source": [
     "from thesis_schneg.vis_modules import _get_results_paths, load_results\n",
     "color = None\n",
@@ -679,7 +694,288 @@
     }
    ],
    "source": [
-    "sets[3]"
+    "sets[3].sort_values(by='count()', ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Named Entities  \n",
+    "\n",
+    "In this experiment the query logs were investigated with regard to named entities.\n",
+    "\n",
+    "Configuration:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from thesis_schneg.model import DatasetName, AnalysisName\n",
+    "\n",
+    "##### set visualization configuration #####\n",
+    "\n",
+    "# save visualization or not\n",
+    "save_vis: bool = False\n",
+    "# save_vis: bool = True\n",
+    "\n",
+    "# select dataset (if none is selected all datasets are visualized in a joint plot) \n",
+    "# dataset: DatasetName = None \n",
+    "dataset: DatasetName = 'aol'\n",
+    "# dataset: DatasetName = 'aql'\n",
+    "# dataset: DatasetName = 'ms-marco'\n",
+    "# dataset: DatasetName = 'orcas'\n",
+    "\n",
+    "# set analysis that should be visualized\n",
+    "analysis_name: AnalysisName = 'extract-named-entities'\n",
+    "# analysis_name: AnalysisName = 'named-entities-count'\n",
+    "\n",
+    "\n",
+    "# load visualization parametes into dictionary\n",
+    "if analysis_name == 'extract-named-entities':\n",
+    "    vis_params = {\"dataset-col-x\": \"entity\", \"dataset-col-y\": \"count()\", \"x-label\": \"Named entities\", \"y-label\": \"Count\", \"x-lim\": None, \"y-lim\": None, \"title\": \"Count of named entities\"}\n",
+    "elif analysis_name == 'named-entities-count':\n",
+    "    vis_params = {\"dataset-col-x\": \"entity-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Number of named entities\", \"y-label\": \"Count\", \"x-lim\": None, \"y-lim\": None, \"title\": \"Number of named entities in a query\"}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from thesis_schneg.vis_modules import _get_results_paths, load_results\n",
+    "color = None\n",
+    "label = None \n",
+    "lengths = []\n",
+    "counts = []\n",
+    "sets = []\n",
+    "if dataset is None:\n",
+    "    # crawl files from all datasets and load into dictionary\n",
+    "    paths = {f\"{name}\": _get_results_paths(name, analysis_name) for name in [\n",
+    "        \"aol\", \"ms-marco\", \"orcas\", \"aql\"]}\n",
+    "    # iterate over datasets and create visualization\n",
+    "    for name, result_paths in paths.items():\n",
+    "        vis_data = load_results(result_paths)\n",
+    "        sets.append(vis_data)\n",
+    "        # modify data -> create relative frequency\n",
+    "        # vis_data[vis_params[\"dataset-col-y\"]] = vis_data[vis_params[\"dataset-col-y\"]]/vis_data[vis_params[\"dataset-col-y\"]].sum()\n",
+    "        lengths.append(vis_data[vis_params[\"dataset-col-x\"]].to_list())\n",
+    "        counts.append(vis_data[vis_params[\"dataset-col-y\"]].to_list())\n",
+    "    color = ['blue', 'orange', 'red', 'purple']\n",
+    "    label=[\"AOL\", \"MS-MARCO\", \"ORCAS\", \"AQL\"]\n",
+    "else:\n",
+    "    # load data from single dataset\n",
+    "    result_paths = _get_results_paths(dataset, analysis_name)\n",
+    "    vis_data = load_results(result_paths)\n",
+    "    # modify data -> create relative frequency\n",
+    "    # vis_data[vis_params[\"dataset-col-y\"]] = vis_data[vis_params[\"dataset-col-y\"]]/vis_data[vis_params[\"dataset-col-y\"]].sum()\n",
+    "    lengths.append(vis_data[vis_params[\"dataset-col-x\"]].to_list())\n",
+    "    counts.append(vis_data[vis_params[\"dataset-col-y\"]].to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>entity</th>\n",
+       "      <th>entity-label</th>\n",
+       "      <th>count()</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>free home demolition</td>\n",
+       "      <td>ORG-Companies, agencies, institutions, etc.</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>free home electronics owner's</td>\n",
+       "      <td>ORG-Companies, agencies, institutions, etc.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>free home hiv</td>\n",
+       "      <td>ORG-Companies, agencies, institutions, etc.</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>free home inprovement</td>\n",
+       "      <td>ORG-Companies, agencies, institutions, etc.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>free home inspection checklist</td>\n",
+       "      <td>ORG-Companies, agencies, institutions, etc.</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1322</th>\n",
+       "      <td>helfrecht</td>\n",
+       "      <td>PERSON-People, including fictional</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1323</th>\n",
+       "      <td>helfrecht shell</td>\n",
+       "      <td>WORK_OF_ART-Titles of books, songs, etc.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1324</th>\n",
+       "      <td>helfrecht spark plug</td>\n",
+       "      <td>PERSON-People, including fictional</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1325</th>\n",
+       "      <td>helfrichi</td>\n",
+       "      <td>GPE-Countries, cities, states</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1326</th>\n",
+       "      <td>helga</td>\n",
+       "      <td>GPE-Countries, cities, states</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1392794 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              entity  \\\n",
+       "0               free home demolition   \n",
+       "1      free home electronics owner's   \n",
+       "2                      free home hiv   \n",
+       "3              free home inprovement   \n",
+       "4     free home inspection checklist   \n",
+       "...                              ...   \n",
+       "1322                       helfrecht   \n",
+       "1323                 helfrecht shell   \n",
+       "1324            helfrecht spark plug   \n",
+       "1325                       helfrichi   \n",
+       "1326                           helga   \n",
+       "\n",
+       "                                     entity-label  count()  \n",
+       "0     ORG-Companies, agencies, institutions, etc.        2  \n",
+       "1     ORG-Companies, agencies, institutions, etc.        1  \n",
+       "2     ORG-Companies, agencies, institutions, etc.        4  \n",
+       "3     ORG-Companies, agencies, institutions, etc.        1  \n",
+       "4     ORG-Companies, agencies, institutions, etc.        5  \n",
+       "...                                           ...      ...  \n",
+       "1322           PERSON-People, including fictional        2  \n",
+       "1323     WORK_OF_ART-Titles of books, songs, etc.        1  \n",
+       "1324           PERSON-People, including fictional        1  \n",
+       "1325                GPE-Countries, cities, states        4  \n",
+       "1326                GPE-Countries, cities, states        9  \n",
+       "\n",
+       "[1392794 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vis_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_vis_data = vis_data.sort_values(by='count()', ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    entity                                       entity-label  \\\n",
+      "0                    yahoo        ORG-Companies, agencies, institutions, etc.   \n",
+      "0                  florida                      GPE-Countries, cities, states   \n",
+      "0                    texas                      GPE-Countries, cities, states   \n",
+      "0                 american  NORP-Nationalities or religious or political g...   \n",
+      "0                 new york                      GPE-Countries, cities, states   \n",
+      "...                    ...                                                ...   \n",
+      "1188                 hhreg        ORG-Companies, agencies, institutions, etc.   \n",
+      "880                1025283         DATE-Absolute or relative dates or periods   \n",
+      "1190             hhs.c.com        ORG-Companies, agencies, institutions, etc.   \n",
+      "1191  hhs.jordan.k12.ut.us                 PERSON-People, including fictional   \n",
+      "1283                virago                 PERSON-People, including fictional   \n",
+      "\n",
+      "      count()  \n",
+      "0      172766  \n",
+      "0      155477  \n",
+      "0       96601  \n",
+      "0       92190  \n",
+      "0       76858  \n",
+      "...       ...  \n",
+      "1188        1  \n",
+      "880         1  \n",
+      "1190        1  \n",
+      "1191        1  \n",
+      "1283        1  \n",
+      "\n",
+      "[1392794 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vis_data)"
    ]
   }
  ],
@@ -699,7 +995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
