repo: readme updated code: descriptive vis updated

--- a/thesis/chapter1.tex
+++ b/thesis/chapter1.tex
@@ -16,7 +16,7 @@ Search engine query logs are an important resource to promote research in inform
 
 \begin{figure}
     \centering
-    \import{plots/query-length-chars}{all.pgf}
+    \import{../plots/extract-named-entities}{all.pgf}
     \caption{Lorem ipsum dolor sit amet, consectetuer adipisc-
   ing elit. Etiam lobortis facilisis sem. Nullam nec mi et neque
   pharetra sollicitudin. Praesent imperdiet mi nec ante. Donec
