--- a/src/thesis_schneg/vis_descriptive_statistics.ipynb
+++ b/src/thesis_schneg/vis_descriptive_statistics.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from thesis_schneg.model import DatasetName, AnalysisName\n",
+    "from thesis_schneg.model import DatasetName\n",
     "\n",
     "##### set visualization configuration #####\n",
     "\n",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -417,21 +417,21 @@
      "output_type": "stream",
      "text": [
       "Loading data from aol dataset\n",
-      "aol loaded in 0.00043792724609375 min\n",
+      "aol loaded in 0.0901569922765096 min\n",
       "Loading data from aql dataset\n",
-      "aql loaded in 0.0001819173494974772 min\n",
+      "aql loaded in 0.05615517695744832 min\n",
       "Loading data from ms-marco dataset\n",
-      "ms-marco loaded in 0.00019423564275105793 min\n",
+      "ms-marco loaded in 0.2019578258196513 min\n",
       "Loading data from orcas dataset\n",
-      "orcas loaded in 0.00015908082326253256 min\n",
+      "orcas loaded in 0.03890189329783122 min\n",
       "Loading data from aol dataset\n",
-      "aol loaded in 8.773008982340494e-05 min\n",
+      "aol loaded in 0.017818991343180338 min\n",
       "Loading data from aql dataset\n",
-      "aql loaded in 0.0001801013946533203 min\n",
+      "aql loaded in 0.03989994525909424 min\n",
       "Loading data from ms-marco dataset\n",
-      "ms-marco loaded in 9.181896845499675e-05 min\n",
+      "ms-marco loaded in 0.015539729595184326 min\n",
       "Loading data from orcas dataset\n",
-      "orcas loaded in 8.753140767415364e-05 min\n"
+      "orcas loaded in 0.017835648854573567 min\n"
      ]
     }
    ],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
