code: aql-get-words-2006, get-temporal-url-proportion. filter-by-year added

--- a/src/thesis_schneg/inspect_results.ipynb
+++ b/src/thesis_schneg/inspect_results.ipynb
@@ -464,7 +464,7 @@
      "output_type": "stream",
      "text": [
       "Loading data from aql dataset\n",
-      "aql loaded in 1.966374357541402 min\n"
+      "aql loaded in 2.1104878187179565 min\n"
      ]
     }
    ],
@@ -561,16 +561,22 @@
       "28144  Смешные Моменты Гта Самп               24      4170\n",
       "5849   girlfriend matthew sweet               24      3781\n",
       "11727  December global holidays               24      3610\n",
-      "8546   \"Harm to Ongoing Matter\"               24      3514\n"
+      "8546   \"Harm to Ongoing Matter\"               24      3514\n",
+      "['茅聵驴茅聡聦猫聹聵猫聸聸忙卤', '#FreeMariaButina', 'พระชัยหลวงพ่อโสธรปี 2505']\n"
      ]
     }
    ],
    "source": [
+    "most_frequent_queries = []\n",
     "for length in [14,16,24]:\n",
     "    print(f\"Length: {length}\")\n",
     "    data_queried = analysis_data[0][dataset].query('`character-count` == @length')\n",
-    "    print(data_queried.sort_values(by='count()', ascending=False).head(20))\n",
-    "# analysis_data[0]['aql'].sort_values(by='count()', ascending=False).head(30).sort_values(by='character-count', ascending=True)"
+    "    data_queried_sorted = data_queried.sort_values(by='count()', ascending=False).head(20) \n",
+    "    print(data_queried_sorted)\n",
+    "    most_frequent_queries.append(data_queried_sorted['serp_query_text_url'].head(1).to_list())\n",
+    "# analysis_data[0]['aql'].sort_values(by='count()', ascending=False).head(30).sort_values(by='character-count', ascending=True)\n",
+    "famous_queries = [item for sublist in most_frequent_queries for item in sublist]\n",
+    "print(famous_queries)"
    ]
   },
   {
